<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:text="Screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Brown_500"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.4"
            android:background="@color/Button_Game_Background"
            android:text="@string/Reset"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="0.35"
            android:background="@color/Button_Game_Background"
            android:text="@string/Undo" />

        <Button
            android:id="@+id/buttonBackToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.35"
            android:background="@color/Button_Game_Background"
            android:text="@string/BackToMenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Ten"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bestScore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/bacwit"
            android:gravity="center|top"
            android:text="@string/Best"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/bacwit"
            android:gravity="center|top"
            android:text="@string/Score"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bScore"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="0.47"
            android:gravity="center|top"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Scor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center|top"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.example.user.Oyun2048.Screen
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Tahta_Ic"
            android:columnCount="4"
            android:rowCount="4">

        </com.example.user.Oyun2048.Screen>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>