<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.Oyun2048.MainActivity"
    android:weightSum="1"
    android:background="@color/Two">

    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ana_ekran" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center|left"
            android:background="@drawable/bacwit"
            android:ems="10"
            android:hint=" Enter your name :"
            android:padding="15dp">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:weightSum="1"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/start_button"
            style="@style/AppTheme2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/Start_button"
            android:gravity="left|center"
            android:shadowColor="@color/White"
            android:text="@string/Start"
            android:textSize="20sp"
            android:paddingLeft="20dp"/>

        <Button
            android:id="@+id/leaderboard"
            style="@style/AppTheme2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/Brwn"
            android:gravity="left|center"
            android:text="@string/Leader"
            android:textSize="20sp"
            android:paddingRight="40dp"
            android:paddingLeft="20dp"/>

        <Button
            android:id="@+id/exit_button"
            style="@style/AppTheme2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginTop="10dp"
            android:background="@color/Button_Game_Background"
            android:gravity="left|center"
            android:text="@string/Exit"
            android:textSize="20sp"
            android:paddingRight="40dp"
            android:paddingLeft="20dp"/>
    </LinearLayout>
</LinearLayout>
